# muza-sdk

./: .gitignore  CMakeLists.txt  README.md  main.cpp
backends/bass/: BassGlobal.cpp  BassGlobal.h  BassStream.cpp  BassStream.h
bass/: BassGlobal.cpp  BassGlobal.h  BassStream.cpp  BassStream.h
cli/: controls.h  player.cpp
entities/: config.h  device.h
interfaces/: IGlobal.h  IStream.h
tests/bass/: test_stream.cpp
utils/: logger.h
